@@ -1,17 +1,10 @@
 package com.healthy.backend.service;
 
-import com.healthy.backend.dto.appointment.AppointmentResponse;
 import com.healthy.backend.dto.psychologist.PsychologistRequest;
 import com.healthy.backend.dto.psychologist.PsychologistResponse;
-import com.healthy.backend.dto.student.StudentResponse;
-import com.healthy.backend.dto.timeslot.PsychologistAvailabilityResponse;
 import com.healthy.backend.dto.timeslot.TimeSlotResponse;
-import com.healthy.backend.dto.user.UsersRequest;
-import com.healthy.backend.dto.user.UsersResponse;
-import com.healthy.backend.entity.Appointments;
 import com.healthy.backend.entity.Psychologists;
 import com.healthy.backend.entity.TimeSlots;
-import com.healthy.backend.entity.Users;
 import com.healthy.backend.exception.ResourceNotFoundException;
 import com.healthy.backend.mapper.PsychologistsMapper;
 import com.healthy.backend.mapper.TimeSlotMapper;
@@ -20,16 +13,12 @@ import com.healthy.backend.repository.PsychologistRepository;
 import com.healthy.backend.repository.TimeSlotRepository;
 import com.healthy.backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
 
 @Service
 @RequiredArgsConstructor
@@ -44,82 +33,47 @@ public class PsychologistService {
 
     public List<PsychologistResponse> getAllPsychologistDTO() {
         List<Psychologists> psychologists = psychologistRepository.findAll();
-
-        return psychologists.stream()
-                .map(this::convert)
-                .collect(Collectors.toList());
+        return psychologists.stream().map(this::callMapper).toList();
     }
 
     public PsychologistResponse getPsychologistById(String id) {
         Psychologists psychologist = psychologistRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("No psychologist found with id" + id));
-        return convert(psychologist);
+       return callMapper(psychologist);
     }
 
-    public PsychologistResponse convert(Psychologists psychologist) {
-        List<Appointments> appointments = appointmentRepository.findByPsychologistID(psychologist.getPsychologistID());
-        Users users = userRepository.findById(psychologist.getUserID())
-                .orElseThrow(() -> new ResourceNotFoundException("No user found with psychologistID"));
-        return
-                PsychologistResponse.builder()
-                        .psychologistId(psychologist.getPsychologistID())
-                        .status(psychologist.getStatus().name())
-                        .specialization(psychologist.getSpecialization())
-                        .yearsOfExperience(psychologist.getYearsOfExperience())
-                        .usersResponse(UsersResponse.builder()
-                                .fullName(users.getFullName())
-                                .username(users.getUsername())
-                                .phoneNumber(users.getPhoneNumber())
-                                .email(users.getEmail())
-                                .gender(users.getGender().toString())
-                                .build())
-                        .appointment(
-                                appointments.isEmpty()
-                                        ? Collections.emptyList() : appointments.stream()
-                                        .map(a -> AppointmentResponse.builder()
-                                                .appointmentID(a.getAppointmentID())
-                                                .CreatedAt(a.getCreatedAt())
-                                                .Status(a.getStatus().name())
-                                                .studentResponse(
-                                                        StudentResponse.builder()
-                                                                .studentId(a.getStudentID())
-                                                                .grade(a.getStudent().getGrade())
-                                                                .className(a.getStudent().getClassName())
-                                                                .schoolName(a.getStudent().getSchoolName())
-                                                                .depressionScore(a.getStudent().getDepressionScore())
-                                                                .anxietyScore(a.getStudent().getAnxietyScore())
-                                                                .stressScore(a.getStudent().getStressScore())
-                                                                .build()
-                                                )
-                                                .Text(a.getNotes())
-                                                .timeSlotID(a.getTimeSlotsID())
-                                                .UpdatedAt(a.getUpdatedAt()).build()
-                                        )
-                                        .collect(Collectors.toList())
-                        )
-                        .build();
-    }
     // Update psychologist
     public PsychologistResponse updatePsychologist(String id, PsychologistRequest request) {
         Psychologists psychologist = psychologistRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("No psychologist found with id " + id));
-
-        if (request.getSpecialization() != null) {
+        if (request.getSpecialization() == null
+                && request.getYearsOfExperience() == null
+                && request.getStatus() == null) {
+            throw new ResourceNotFoundException("No fields to update");
+        }
+        // Update fields
+        assert request.getSpecialization() != null;
+        if (!request.getSpecialization().equals(psychologist.getSpecialization())) {
             psychologist.setSpecialization(request.getSpecialization());
         }
-        if (request.getYearsOfExperience() != null) {
+        assert request.getYearsOfExperience() != null;
+        if (!request.getYearsOfExperience().equals(psychologist.getYearsOfExperience())) {
             psychologist.setYearsOfExperience(request.getYearsOfExperience());
         }
-        if (request.getStatus() != null) {
+        assert request.getStatus() != null;
+        if (!request.getStatus().equals(psychologist.getStatus().name())) {
+            if (!isValidStatus(request.getStatus()))
+                throw new ResourceNotFoundException("Status is not valid");
             psychologist.setStatus(Psychologists.Status.valueOf(request.getStatus()));
         }
+
         psychologistRepository.save(psychologist);
 
-        return convert(psychologist);
+        return callMapper(psychologist);
     }
 
     // Get available time slots
-    public List<TimeSlots> getTimeSlots(LocalDate date, String psychologistId) {
+    public List<TimeSlotResponse> getTimeSlots(LocalDate date, String psychologistId) {
         Psychologists psychologist = psychologistRepository.findById(psychologistId)
                 .orElseThrow(() -> new ResourceNotFoundException("Psychologist not found"));
         if (psychologist == null) {
@@ -128,17 +82,18 @@ public class PsychologistService {
         if (psychologist.getStatus() != Psychologists.Status.Active) {
             throw new ResourceNotFoundException("Psychologist is not Active");
         }
-        return timeSlotRepository.findBySlotDateAndPsychologist(date, psychologist);
+        List<TimeSlots> timeSlots = timeSlotRepository.findBySlotDateAndPsychologist(date, psychologist);
+        return timeSlotMapper.buildResponse(timeSlots);
     }
 
     // Create default time slots
-    public boolean createDefaultTimeSlots(LocalDate date, String psychologistId) {
+    public List<TimeSlotResponse> createDefaultTimeSlots(LocalDate date, String psychologistId) {
         Psychologists psychologist = psychologistRepository.findById(psychologistId)
                 .orElseThrow(() -> new ResourceNotFoundException("Psychologist not found"));
 
         List<TimeSlots> existingSlots = timeSlotRepository.findBySlotDateAndPsychologist(date, psychologist);
         if (!existingSlots.isEmpty()) {
-            return false;
+            throw new RuntimeException("Time slots already exist");
         }
 
         LocalTime start = LocalTime.of(8, 0); // Morning shift: 8h - 11h
@@ -147,7 +102,7 @@ public class PsychologistService {
         LocalTime end = LocalTime.of(17, 0);
         List<TimeSlots> timeSlots = new ArrayList<>(generateTimeSlots(date, start, noonBreakStart, noonBreakEnd, end, psychologist));
         timeSlotRepository.saveAll(timeSlots);
-        return true;
+        return timeSlotMapper.buildResponse(timeSlots);
     }
 
     private List<TimeSlots> generateTimeSlots(
@@ -165,7 +120,23 @@ public class PsychologistService {
             timeSlots.add(new TimeSlots(date, currentTime, nextTime, psychologist, index++));
             currentTime = nextTime;
         }
-
         return timeSlots;
+    }
+
+    // call psychologistResponse Mapper
+    private PsychologistResponse callMapper(Psychologists psychologist) {
+        return psychologistsMapper.buildPsychologistResponse(psychologist,
+                appointmentRepository.findByPsychologistID(psychologist.getPsychologistID()),
+                userRepository.findById(psychologist.getUserID()).orElseThrow());
+    }
+
+    // Check if status is valid
+    private boolean isValidStatus(String status) {
+        try {
+            Psychologists.Status.valueOf(status);
+            return true;
+        } catch (IllegalArgumentException e) {
+            return false;
+        }
     }
 }
